fix z-index values (bs3 or foundation have higher values)
When using bootstrap or foundation the fixed elements have a higher z-index.

--- a/css/zoom.css
+++ b/css/zoom.css
@@ -6,7 +6,7 @@ img[data-action="zoom"] {
 .zoom-img,
 .zoom-img-wrap {
   position: relative;
-  z-index: 666;
+  z-index: 99999;
   -webkit-transition: all 300ms;
        -o-transition: all 300ms;
           transition: all 300ms;
@@ -17,7 +17,7 @@ img.zoom-img {
   cursor: -moz-zoom-out;
 }
 .zoom-overlay {
-  z-index: 420;
+  z-index: 9999;
   background: #fff;
   position: fixed;
   top: 0;
